// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Name /> name is updated when input is changed 1`] = `
<div
  class="pt-10"
>
  <div
    class="flex items-center"
  >
    <span
      class="align-middle mr-3"
    >
      <a
        href="/"
      >
        <img
          alt="_logo_"
          class="w-10 h-10"
          src="name_icon.svg"
        />
      </a>
    </span>
    <span
      class="uppercase text-green text-lg font-bold "
    >
      Let's meet you
    </span>
  </div>
  <div>
    <h3
      class="font-bold text-2xl md:text-3xl mb-4"
    >
      First things first, who is taking the assessment?
    </h3>
  </div>
  <div>
    <input
      class="w-full lg:max-w-sm bg-white text-2xl placeholder:text-opacity-50 tracking-wider placeholder:tracking-wider placeholder:text-black-primary p-3 rounded-md border border-green text-black-primary my-3 font-bold focus:outline-0 focus:outline-offset-0"
      data-testid="name_input"
      id="name_input"
      name="name_input"
      placeholder="Your name"
      type="text"
    />
    <div
      class="flex"
    >
      <div
        class="w-full lg:max-w-sm text-white bg-green active:scale-95 uppercase cursor-pointer hover:opacity-80  p-3 text-2xl flex justify-center items-center rounded-md my-3 btn"
      >
        <span
          class="px-[7px] font-bold tracking-wider"
        >
          Next
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Name /> renders correctly 1`] = `
<div
  class="pt-10"
>
  <div
    class="flex items-center"
  >
    <span
      class="align-middle mr-3"
    >
      <a
        href="/"
      >
        <img
          alt="_logo_"
          class="w-10 h-10"
          src="name_icon.svg"
        />
      </a>
    </span>
    <span
      class="uppercase text-green text-lg font-bold "
    >
      Let's meet you
    </span>
  </div>
  <div>
    <h3
      class="font-bold text-2xl md:text-3xl mb-4"
    >
      First things first, who is taking the assessment?
    </h3>
  </div>
  <div>
    <input
      class="w-full lg:max-w-sm bg-white text-2xl placeholder:text-opacity-50 tracking-wider placeholder:tracking-wider placeholder:text-black-primary p-3 rounded-md border border-green text-black-primary my-3 font-bold focus:outline-0 focus:outline-offset-0"
      data-testid="name_input"
      id="name_input"
      name="name_input"
      placeholder="Your name"
      type="text"
    />
    <div
      class="flex"
    >
      <div
        class="w-full lg:max-w-sm text-white bg-green active:scale-95 uppercase cursor-not-allowed bg-opacity-50  p-3 text-2xl flex justify-center items-center rounded-md my-3 btn"
      >
        <span
          class="px-[7px] font-bold tracking-wider"
        >
          Next
        </span>
      </div>
    </div>
  </div>
</div>
`;
